--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -21,6 +21,8 @@ jobs:
         sudo apt install -y build-essential git zip unzip openjdk-17-jdk python3-pip python3-setuptools python3-wheel
         pip install --upgrade Cython virtualenv
         pip install buildozer
+        yes | sdkmanager --licenses || true
+        sdkmanager "build-tools;34.0.0" "platforms;android-34"
 
     - name: Build APK
       run: |
