--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,18 +29,18 @@ jobs:
         cd $ANDROID_SDK_ROOT/cmdline-tools
         wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
         unzip cmdline-tools.zip -d latest
-        # перемещаем содержимое внутрь latest (чтобы bin/ оказался там, где ожидает buildozer)
         mv latest/cmdline-tools/* latest/
         export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
         yes | sdkmanager --licenses
-        sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34"
+        sdkmanager --install "platform-tools" "build-tools;34.0.0" "platforms;android-34"
+
 
     - name: Build APK
       run: |
         export ANDROID_SDK_ROOT=$HOME/android-sdk
         export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
-        buildozer init || true
         buildozer -v android debug
+
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
