--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -7,6 +7,9 @@ jobs:
   build:
     runs-on: ubuntu-latest
 
+    env:
+      ANDROID_SDK_ROOT: ${{ github.workspace }}/android-sdk
+
     steps:
     - uses: actions/checkout@v2
 
@@ -24,26 +27,24 @@ jobs:
 
     - name: Install Android SDK
       run: |
-        export ANDROID_SDK_ROOT=$HOME/android-sdk
         mkdir -p $ANDROID_SDK_ROOT/cmdline-tools
         cd $ANDROID_SDK_ROOT/cmdline-tools
-        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O cmdline-tools.zip
-        unzip cmdline-tools.zip -d latest
+        wget https://dl.google.com/android/repository/commandlinetools-linux-10406996_latest.zip -O tools.zip
+        unzip tools.zip -d latest
         mv latest/cmdline-tools/* latest/
         export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
         yes | sdkmanager --licenses
-        sdkmanager --install "platform-tools" "build-tools;34.0.0" "platforms;android-34"
-
+        yes | sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34"
 
     - name: Build APK
       run: |
-        export ANDROID_SDK_ROOT=$HOME/android-sdk
         export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
+        export USE_SDK_WRAPPER=1
         buildozer -v android debug
-
 
     - name: Upload APK
       uses: actions/upload-artifact@v4
       with:
         name: qrpass-apk
         path: bin/*.apk
+
