--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,10 +36,17 @@ jobs:
         yes | sdkmanager --licenses
         yes | sdkmanager "platform-tools" "build-tools;34.0.0" "platforms;android-34"
 
+    - name: Force SDK version for Buildozer
+      run: |
+        mkdir -p ~/.buildozer
+        echo '{ "sdk": { "build_tools_version": "34.0.0", "api": 34, "minapi": 21 } }' > ~/.buildozer/global.json
+        cat ~/.buildozer/global.json
+
     - name: Build APK
       run: |
+        export ANDROIDSDK=$ANDROID_SDK_ROOT
+        export ANDROIDNDK=$ANDROID_SDK_ROOT/ndk-bundle
         export PATH=$ANDROID_SDK_ROOT/cmdline-tools/latest/bin:$ANDROID_SDK_ROOT/platform-tools:$PATH
-        export USE_SDK_WRAPPER=1
         buildozer -v android debug
 
     - name: Upload APK
@@ -47,4 +54,3 @@ jobs:
       with:
         name: qrpass-apk
         path: bin/*.apk
-
